--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #spring.profiles.active=dev
 #
-#spring.datasource.url=jdbc:postgresql://localhost:5432/agenda-api?user=postgres&password=root
-#spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.properties.hibernate.use_sql_comments=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.type=trace
-#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
+spring.datasource.url=jdbc:postgresql://localhost:5432/agenda-api?user=postgres&password=root
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 
 #Heroku
-spring.datasource.url=${JDBC_DATASOURCE_URL}
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+#spring.datasource.url=${JDBC_DATASOURCE_URL}
+#spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
