--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.profiles.active=dev
+spring.profiles.active=dev
 #
 spring.datasource.url=jdbc:postgresql://localhost:5432/agenda-api?user=postgres&password=root
 spring.jpa.hibernate.ddl-auto=none
