Implementação de autorização da aplicação com spring security

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,3 +7,8 @@ spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.type=info
+
+# JWT
+jwt.secret=_(120@#$3t09138uioajsdU2B1Rjs32
+# valor em segundos
+jwt.expiration=6000
