--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 
-#Heroku
-#spring.datasource.url=${JDBC_DATASOURCE_URL}
-#spring.jpa.show-sql=true
-#spring.jpa.generate-ddl=true
+# JWT
+jwt.secret=_(120@#$3t09138uioajsdU2B1Rjs32
+# valor em segundos
+jwt.expiration=6000
