--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.jpa.properties.hibernate.type=trace
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 
 # JWT
-jwt.secret=_(120@#$3t09138uioajsdU2B1Rjs32
+jwt.secret=myd3vs@@:)j@1r05
 # valor em segundos
 jwt.expiration=6000
