--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ jdk:
 before_install:
   - export TZ=Brazil/East
   - chmod +x mvnw
-deploy:
-  provider: heroku
-  api_key:
-    - secure: $SECURE_KEY
-  app: $APP
+#deploy:
+ # provider: heroku
+ # api_key:
+ #   - secure: $SECURE_KEY
+ # app: $APP
